# Study-Planner-AI

./: README.md
backend/: BUILD.md  CMakeLists.txt  main.cpp  package-lock.json  package.json  server.cpp  server.js  study_planner.db
backend/controllers/: AuthController.cpp  AuthController.h  CourseController.cpp  CourseController.h  ProgressController.cpp  ProgressController.h  ScheduleController.cpp  ScheduleController.h
backend/database/: compile_error.txt  db_manager.cpp  db_manager.h
backend/models/: Course.cpp  Course.h  StudySession.cpp  StudySession.h  Topic.cpp  Topic.h  User.cpp  User.h
backend/services/: AuthService.cpp  AuthService.h  ProgressTracker.cpp  ProgressTracker.h  RecommendationEngine.cpp  RecommendationEngine.h  Scheduler.cpp  Scheduler.h
study-planner-frontend/: .npmrc  index.html  package-lock.json  package.json  pnpm-lock.yaml
study-planner-frontend/src/: App.tsx
study-planner-frontend/src/components/: Layout.tsx
study-planner-frontend/src/pages/: CourseManager.tsx  Dashboard.tsx  LoginPage.tsx  ProgressTracker.tsx  RegisterPage.tsx  StudyPlanner.tsx
study-planner-frontend/src/services/: api.ts
